Add README, and project settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,6 +5,9 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E9CA9E494A6FAFCBEC50F8879715DB32
+CompanyName=MrBrenlla
+CopyrightNotice=
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CE06E5D34B320BB64343D59FC7D778B0", "{GameName}")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
